--- a/dev-util/catalyst/ChangeLog
+++ b/dev-util/catalyst/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/catalyst
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.252 2012/10/31 22:17:21 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.253 2012/11/02 00:32:29 zerochaos Exp $
+
+*catalyst-2.0.12.1 (02 Nov 2012)
+
+  02 Nov 2012; Rick Farina <zerochaos@gentoo.org> +catalyst-2.0.12.1.ebuild:
+  catalyst 2.0.12.1 fixes fsscript not being marked executable and random tmpfs
+  folders appears
 
 *catalyst-2.0.12 (31 Oct 2012)
 
