--- a/sys-apps/pcmciautils/ChangeLog
+++ b/sys-apps/pcmciautils/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/pcmciautils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmciautils/ChangeLog,v 1.41 2012/11/01 08:06:16 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmciautils/ChangeLog,v 1.42 2012/11/02 01:49:52 ssuominen Exp $
+
+  02 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -pcmciautils-015.ebuild, -pcmciautils-016.ebuild, -pcmciautils-017.ebuild:
+  old
 
 *pcmciautils-018_p8 (01 Nov 2012)
 
