--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.716 2012/11/02 03:26:45 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.717 2012/11/02 03:29:26 blueness Exp $
+
+*hardened-sources-3.2.33 (02 Nov 2012)
+
+  02 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.2.33.ebuild:
+  vanilla-3.2.33 + genpatches-3.2-16 + grsecurity-2.9.1-3.2.33-201210310843
 
 *hardened-sources-2.6.32-r137 (02 Nov 2012)
 
