--- a/sys-cluster/mpich2/ChangeLog
+++ b/sys-cluster/mpich2/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/mpich2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/mpich2/ChangeLog,v 1.80 2012/10/16 18:43:14 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/mpich2/ChangeLog,v 1.81 2012/11/02 04:37:25 jsbronder Exp $
+
+*mpich2-1.5 (02 Nov 2012)
+
+  02 Nov 2012; Justin Bronder <jsbronder@gentoo.org> +mpich2-1.5.ebuild:
+  bump
 
   16 Oct 2012; Justin Lecher <jlec@gentoo.org> mpich2-1.2.1_p1-r1.ebuild,
   mpich2-1.4_rc2-r1.ebuild, mpich2-1.4.1_p1.ebuild, metadata.xml:
