--- a/sys-cluster/mpich2/ChangeLog
+++ b/sys-cluster/mpich2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-cluster/mpich2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/mpich2/ChangeLog,v 1.82 2012/11/02 04:39:33 jsbronder Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/mpich2/ChangeLog,v 1.83 2012/11/02 04:41:43 jsbronder Exp $
+
+  02 Nov 2012; Justin Bronder <jsbronder@gentoo.org> -mpich2-1.4_rc2-r1.ebuild:
+  clear old version
 
   02 Nov 2012; Justin Bronder <jsbronder@gentoo.org> mpich2-1.4.1_p1.ebuild:
   Older mpich2 depends on older hwloc
