--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.744 2012/11/02 01:12:32 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.745 2012/11/02 04:59:39 phajdan.jr Exp $
+
+*chromium-24.0.1312.2 (02 Nov 2012)
+
+  02 Nov 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  -chromium-24.0.1297.0.ebuild, +chromium-24.0.1312.2.ebuild:
+  Dev channel bump. Remove old.
 
 *chromium-24.0.1312.1 (02 Nov 2012)
 
