--- a/dev-cpp/gtest/ChangeLog
+++ b/dev-cpp/gtest/ChangeLog
@@ -1,5 +1,8 @@
 # ChangeLog for dev-cpp/gtest
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gtest/ChangeLog,v 1.15 2012/11/02 05:09:23 jsbronder Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gtest/ChangeLog,v 1.16 2012/11/02 05:32:01 jsbronder Exp $
+
+  02 Nov 2012; Justin Bronder <jsbronder@gentoo.org> gtest-1.6.0-r1.ebuild:
+  Resolve #361703 by enabling threads unconditionally.
 
 *gtest-1.6.0-r1 (02 Nov 2012)
 
