--- a/net-nntp/nzbget/ChangeLog
+++ b/net-nntp/nzbget/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-nntp/nzbget
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.46 2012/11/02 06:15:57 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.47 2012/11/02 06:17:11 radhermit Exp $
+
+  02 Nov 2012; Tim Harder <radhermit@gentoo.org> -nzbget-0.7.0.ebuild:
+  Remove old.
 
 *nzbget-9.0_pre477 (02 Nov 2012)
 
