--- a/media-gfx/gmic/ChangeLog
+++ b/media-gfx/gmic/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/gmic
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gmic/ChangeLog,v 1.23 2012/08/31 18:46:14 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gmic/ChangeLog,v 1.24 2012/11/02 07:22:35 radhermit Exp $
+
+*gmic-1.5.2.1 (02 Nov 2012)
+
+  02 Nov 2012; Tim Harder <radhermit@gentoo.org> +gmic-1.5.2.1.ebuild,
+  +files/gmic-1.5.2.1-makefile.patch:
+  Version bump.
 
 *gmic-1.5.1.9 (31 Aug 2012)
 
