--- a/media-plugins/gimp-gmic/ChangeLog
+++ b/media-plugins/gimp-gmic/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gimp-gmic
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gimp-gmic/ChangeLog,v 1.20 2012/11/02 07:53:21 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gimp-gmic/ChangeLog,v 1.21 2012/11/02 07:53:57 radhermit Exp $
+
+  02 Nov 2012; Tim Harder <radhermit@gentoo.org> -gimp-gmic-1.5.1.7.ebuild,
+  -gimp-gmic-1.5.1.8.ebuild:
+  Remove old.
 
 *gimp-gmic-1.5.2.1 (02 Nov 2012)
 
