--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7092 2012/11/02 00:21:01 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7093 2012/11/02 07:59:18 ulm Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  02 Nov 2012; Ulrich Müller <ulm@gentoo.org> package.mask:
+  Update mask for app-editors/emacs-vcs live ebuilds.
 
   02 Nov 2012; Robin H. Johnson <robbat2@gentoo.org> package.mask:
   MySQL 5.5 release time.
