--- a/dev-vcs/git/ChangeLog
+++ b/dev-vcs/git/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-vcs/git
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git/ChangeLog,v 1.159 2012/10/31 19:36:42 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git/ChangeLog,v 1.160 2012/11/02 15:59:14 robbat2 Exp $
+
+*git-1.8.0 (02 Nov 2012)
+
+  02 Nov 2012; Robin H. Johnson <robbat2@gentoo.org> +git-1.8.0.ebuild:
+  Bump.
 
   31 Oct 2012; Mike Frysinger <vapier@gentoo.org> metadata.xml:
   Add information on USE=curl.
