--- a/kde-base/plasma-workspace/ChangeLog
+++ b/kde-base/plasma-workspace/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/plasma-workspace
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/plasma-workspace/ChangeLog,v 1.179 2012/11/02 13:41:31 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/plasma-workspace/ChangeLog,v 1.180 2012/11/02 17:08:29 kensington Exp $
+
+*plasma-workspace-4.8.5-r2 (02 Nov 2012)
+
+  02 Nov 2012; Michael Palimaka <kensington@gentoo.org>
+  +plasma-workspace-4.8.5-r2.ebuild, -plasma-workspace-4.8.5-r1.ebuild:
+  Fix python issue backport.
 
 *plasma-workspace-4.8.5-r1 (02 Nov 2012)
 
