--- a/x11-misc/pcmanfm/ChangeLog
+++ b/x11-misc/pcmanfm/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/pcmanfm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/pcmanfm/ChangeLog,v 1.86 2012/09/22 16:33:28 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/pcmanfm/ChangeLog,v 1.87 2012/11/02 17:16:14 hwoarang Exp $
+
+*pcmanfm-1.0.2 (02 Nov 2012)
+
+  02 Nov 2012; Markos Chandras <hwoarang@gentoo.org> +pcmanfm-1.0.2.ebuild:
+  Version bump
 
 *pcmanfm-1.0.1 (22 Sep 2012)
 
