--- a/net-mail/mu/ChangeLog
+++ b/net-mail/mu/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/mu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/mu/ChangeLog,v 1.10 2012/07/29 13:41:09 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/mu/ChangeLog,v 1.11 2012/11/02 22:06:36 tomka Exp $
+
+*mu-0.9.9 (02 Nov 2012)
+
+  02 Nov 2012; Thomas Kahle <tomka@gentoo.org> +mu-0.9.9.ebuild,
+  -mu-0.9.7.ebuild, -mu-0.9.8.5.ebuild:
+  Bump to 0.9.9, install pdf manual, fix gmime dep (439842), remove old
 
   29 Jul 2012; Thomas Kahle <tomka@gentoo.org> metadata.xml:
   metadata updated
