--- a/sys-libs/libcap-ng/ChangeLog
+++ b/sys-libs/libcap-ng/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/libcap-ng
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libcap-ng/ChangeLog,v 1.50 2012/11/02 11:43:21 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libcap-ng/ChangeLog,v 1.51 2012/11/02 22:25:37 radhermit Exp $
+
+  02 Nov 2012; Tim Harder <radhermit@gentoo.org> libcap-ng-0.7.1.ebuild:
+  Drop unused sys-apps/attr dep as noted by Arfrever.
 
 *libcap-ng-0.7.1 (02 Nov 2012)
 
