--- a/app-pda/usbmuxd/ChangeLog
+++ b/app-pda/usbmuxd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-pda/usbmuxd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/usbmuxd/ChangeLog,v 1.24 2012/08/16 22:02:33 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/usbmuxd/ChangeLog,v 1.25 2012/11/03 07:16:40 ssuominen Exp $
+
+  03 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> usbmuxd-1.0.8-r1.ebuild:
+  amd64/x86 stable wrt #441102
 
   16 Aug 2012; Johannes Huber <johu@gentoo.org> usbmuxd-1.0.8.ebuild:
   Stable for x86, wrt bug #423155
