--- a/app-pda/usbmuxd/ChangeLog
+++ b/app-pda/usbmuxd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-pda/usbmuxd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/usbmuxd/ChangeLog,v 1.25 2012/11/03 07:16:40 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/usbmuxd/ChangeLog,v 1.26 2012/11/03 07:17:34 ssuominen Exp $
+
+  03 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -usbmuxd-1.0.7-r1.ebuild,
+  -files/usbmuxd-1.0.7-receive_packet_overflow.patch, -usbmuxd-1.0.8.ebuild:
+  old
 
   03 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> usbmuxd-1.0.8-r1.ebuild:
   amd64/x86 stable wrt #441102
