--- a/net-analyzer/iptraf-ng/ChangeLog
+++ b/net-analyzer/iptraf-ng/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/iptraf-ng
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/iptraf-ng/ChangeLog,v 1.44 2012/08/27 10:28:11 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/iptraf-ng/ChangeLog,v 1.45 2012/11/03 08:48:34 pinkbyte Exp $
+
+  03 Nov 2012; Sergey Popov <pinkbyte@gentoo.org> iptraf-ng-1.1.3.1-r1.ebuild:
+  Stable on amd64 wrt bug #441426
 
   27 Aug 2012; Jeroen Roovers <jer@gentoo.org> -iptraf-ng-1.1.1.ebuild,
   -iptraf-ng-1.1.2.ebuild:
