--- a/sys-fs/ext3grep/ChangeLog
+++ b/sys-fs/ext3grep/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/ext3grep
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/ext3grep/ChangeLog,v 1.5 2012/02/26 17:51:44 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/ext3grep/ChangeLog,v 1.6 2012/11/03 09:53:50 ssuominen Exp $
+
+  03 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -ext3grep-0.10.1.ebuild:
+  old
 
   26 Feb 2012; Hanno Boeck <hanno@gentoo.org> ext3grep-0.10.2.ebuild,
   +files/ext3grep-0.10.2-new-e2fsprogs.diff:
