--- a/sys-fs/ext3grep/ChangeLog
+++ b/sys-fs/ext3grep/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/ext3grep
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/ext3grep/ChangeLog,v 1.6 2012/11/03 09:53:50 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/ext3grep/ChangeLog,v 1.7 2012/11/03 10:03:44 ssuominen Exp $
+
+  03 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> ext3grep-0.10.2.ebuild,
+  +files/ext3grep-0.10.2-include-unistd_h-for-sysconf.patch:
+  Fix building with recent toolchain wrt #422789 by Diego Elio Pettenò.
+  Missing dependencies of e2fsprogs, os-headers, and pkg-config.
 
   03 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -ext3grep-0.10.1.ebuild:
   old
