--- a/app-text/pep/ChangeLog
+++ b/app-text/pep/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/pep
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/pep/ChangeLog,v 1.21 2012/06/03 23:56:15 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/pep/ChangeLog,v 1.22 2012/11/03 13:37:29 ago Exp $
+
+  03 Nov 2012; Agostino Sarubbo <ago@gentoo.org> pep-2.8-r1.ebuild:
+  Add ~amd64, wrt bug #441116
 
   03 Jun 2012; Zac Medico <zmedico@gentoo.org> pep-2.8.ebuild:
   inherit flag-o-matic for append-flags
@@ -64,4 +67,3 @@
   files/pep-2.8-gentoo.patch:
   Initial import. Ebuild submitted by Steingrim Dovland <steingrd@ifi.uio.no>,
   closing bug #27947
-
