--- a/app-text/libspectre/ChangeLog
+++ b/app-text/libspectre/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/libspectre
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/libspectre/ChangeLog,v 1.58 2012/09/15 09:31:53 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/libspectre/ChangeLog,v 1.59 2012/11/03 14:06:33 blueness Exp $
+
+  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org> libspectre-0.2.7.ebuild:
+  stable ppc ppc64, bug #441114
 
 *libspectre-0.2.7 (15 Sep 2012)
 
