--- a/dev-util/dialog/ChangeLog
+++ b/dev-util/dialog/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/dialog
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/dialog/ChangeLog,v 1.161 2012/10/31 19:01:53 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/dialog/ChangeLog,v 1.162 2012/11/03 14:08:11 blueness Exp $
+
+  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  dialog-1.1.20120706.ebuild:
+  stable ppc ppc64, bug #440652
 
   31 Oct 2012; Jeroen Roovers <jer@gentoo.org> -dialog-1.1.20110707-r1.ebuild,
   -dialog-1.1.20111020-r1.ebuild:
