--- a/x11-misc/xlockmore/ChangeLog
+++ b/x11-misc/xlockmore/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xlockmore
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.121 2012/11/02 22:43:32 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.122 2012/11/03 15:35:17 ago Exp $
+
+  03 Nov 2012; Agostino Sarubbo <ago@gentoo.org> xlockmore-5.41.ebuild:
+  Stable for amd64, wrt bug #440776
 
   02 Nov 2012; Anthony G. Basile <blueness@gentoo.org> xlockmore-5.41.ebuild:
   stable ppc ppc64, bug #440776
