--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,15 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7097 2012/11/03 11:44:07 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7098 2012/11/03 15:39:08 blueness Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  03 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  hardened/linux/uclibc/mips/package.mask:
+  Mask unstable versions of sysvinit and coreutils on
+  hardened/linux/uclibc/mips
 
   03 Nov 2012; Markos Chandras <hwoarang@gentoo.org> updates/4Q-2012:
   slotmove emesene from 2 to 0
